media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: videos
          persistentVolumeClaim:
            claimName: media-pvc
